@@ -716,6 +716,10 @@
 			<node name="authorize" value="Authorize"/>
 			<node name="resetPosition" value="Reset position"/>
 			<node name="sendReport" value="Send report"/>
+			<node name="addToFavorites" value="Add to favorites"/>
+			<node name="removeFromFavorites" value="Remove from favorites"/>
+			<node name="markAsRead" value="Mark as read"/>
+			<node name="markAsUnread" value="Mark as unread"/>
 		</node>
 		<node name="plugin">
 			<node name="installTitle" value="Install plugin"/>
