@@ -716,6 +716,10 @@
 			<node name="authorize" value="Autoriser"/>
 			<node name="resetPosition" value="Tilbakestill posisjon"/>
 			<node name="sendReport" value="Send rapport"/>
+			<node name="addToFavorites" value="Legg til i favoritter"/>
+			<node name="removeFromFavorites" value="Fjern fra favoritter"/>
+			<node name="markAsRead" value="Mark as read" toBeTranslated="true"/>
+			<node name="markAsUnread" value="Mark as unread" toBeTranslated="true"/>
 		</node>
 		<node name="plugin">
 			<node name="installTitle" value="Installer tillegg"/>
