@@ -706,6 +706,10 @@
 			<node name="authorize" value="Авторизуватись"/>
 			<node name="resetPosition" value="Скинути позицію"/>
 			<node name="sendReport" value="Відправити звіт"/>
+			<node name="addToFavorites" value="Додати в улюблені"/>
+			<node name="removeFromFavorites" value="Прибрати з улюблених"/>
+			<node name="markAsRead" value="Mark as read" toBeTranslated="true"/>
+			<node name="markAsUnread" value="Mark as unread" toBeTranslated="true"/>
 		</node>
 		<node name="plugin">
 			<node name="installTitle" value="Встановити plugin"/>
